src/objects/Treatment_CRF_Report_Table_1__c.object
<CustomObject>
    <fields>
        <fullName>AE_Approved__c</fullName>
        <label>AE Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AE_Submitted__c</fullName>
        <label>AE Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chemo_Treatment_Approved__c</fullName>
        <label>Chemo Treatment Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chemo_Treatment_Submitted__c</fullName>
        <label>Chemo Treatment Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mri_Volume_Early_Approved__c</fullName>
        <label>Mri Volume Early Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mri_Volume_Early_Submitted__c</fullName>
        <label>Mri Volume Early Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mri_Volume_Inter_Approved__c</fullName>
        <label>Mri Volume Inter Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mri_Volume_Inter_Submitted__c</fullName>
        <label>Mri Volume Inter Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mri_Volume_Pre_Surgery_Approved__c</fullName>
        <label>Mri Volume Pre Surgery Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mri_Volume_Pre_Surgery_Submitted__c</fullName>
        <label>Mri Volume Pre Surgery Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Approved__c</fullName>
        <label>Post Surgery Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Submitted__c</fullName>
        <label>Post Surgery Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Treatment CRF Report Table 1</relationshipLabel>
        <relationshipName>Treatment_CRF_Report_Table_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Name__c</fullName>
        <label>Trial Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Treatment CRF Report Table 1</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment CRF Report Table 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>